--- a/static/css/custom-colors.css
+++ b/static/css/custom-colors.css
@@ -7,7 +7,7 @@
 
  /* logo colors:
   * #01aaaa
-  * #804d4d 
+  * #80d4d4 
   * #8ca13b
   */
 
@@ -27,8 +27,8 @@ a.active {
 }
 
 .btn-primary {
-    border-color: #36fed1;
-    background-color: #36fed1;
+    border-color: #80d4d4;
+    background-color: #80d4d4;
 }
 
 .btn-primary:hover,
@@ -55,17 +55,17 @@ fieldset[disabled] .btn-primary:active,
 .btn-primary.disabled.active,
 .btn-primary[disabled].active,
 fieldset[disabled] .btn-primary.active {
-    border-color: #36fed1;
-    background-color: #36fed1;
+    border-color: #80d4d4;
+    background-color: #80d4d4;
 }
 
 .btn-primary .badge {
-    color: #36fed1;
+    color: #80d4d4;
 }
 
 .btn-xl {
-    border-color: #36fed1;
-    background-color: #36fed1;
+    border-color: #80d4d4;
+    background-color: #80d4d4;
 }
 
 .btn-xl:hover,
@@ -73,8 +73,8 @@ fieldset[disabled] .btn-primary.active {
 .btn-xl:active,
 .btn-xl.active,
 .open .dropdown-toggle.btn-xl {
-    border-color: #03dea5;
-    background-color: #03eeb5;
+    border-color: #80d4d4;
+    background-color: #90e4e4;
 }
 
 .btn-xl.disabled,
@@ -92,75 +92,75 @@ fieldset[disabled] .btn-xl:active,
 .btn-xl.disabled.active,
 .btn-xl[disabled].active,
 fieldset[disabled] .btn-xl.active {
-    border-color: #36fed1;
-    background-color: #36fed1;
+    border-color: #80d4d4;
+    background-color: #80d4d4;
 }
 
 .btn-xl .badge {
-    color: #36fed1;
+    color: #80d4d4;
 }
 
 .navbar-default .navbar-brand {
-    color: #36fed1;
+    color: #80d4d4;
 }
 
 .navbar-default .navbar-brand:hover,
 .navbar-default .navbar-brand:focus,
 .navbar-default .navbar-brand:active,
 .navbar-default .navbar-brand.active {
-    color: #03eeb5;
+    color: #90e4e4;
 }
 
 .navbar-default .navbar-toggle {
-    border-color: #36fed1;
-    background-color: #36fed1;
+    border-color: #80d4d4;
+    background-color: #80d4d4;
 }
 
 .navbar-default .navbar-toggle:hover,
 .navbar-default .navbar-toggle:focus {
-    background-color: #36fed1;
+    background-color: #80d4d4;
 }
 
 .navbar-default .nav li a:hover,
 .navbar-default .nav li a:focus {
-    color: #36fed1;
+    color: #80d4d4;
 }
 
 .navbar-default .navbar-nav>.active>a {
-    background-color: #36fed1;
+    background-color: #80d4d4;
 }
 
 .navbar-default .navbar-nav>.active>a:hover,
 .navbar-default .navbar-nav>.active>a:focus {
-    background-color: #03eeb5;
+    background-color: #90e4e4;
 }
 
 #portfolio .portfolio-item .portfolio-link .portfolio-hover {
-    background: rgba(54,254,209,.9);
+    background: rgba(128,212,212,.8);
 }
 
 .timeline>li .timeline-image {
-    background-color: #36fed1;
+    background-color: #80d4d4;
 }
 
 section#contact .form-control:focus {
-    border-color: #36fed1;
+    border-color: #80d4d4;
 }
 
 ul.social-buttons li a:hover,
 ul.social-buttons li a:focus,
 ul.social-buttons li a:active {
-    background-color: #36fed1;
+    background-color: #80d4d4;
 }
 
 ::-moz-selection {
-    background: #36fed1;
+    background: #80d4d4;
 }
 
 ::selection {
-    background: #36fed1;
+    background: #80d4d4;
 }
 
 body {
-    webkit-tap-highlight-color: #36fed1;
+    webkit-tap-highlight-color: #80d4d4;
 }-
